# mikoview

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  mikoview.cpp  mikoview.hpp  readme.md
.github/workflows/: build.yml
.vercel/: project.json
cmake/: MikoConfig.cmake  MikoDependencies.cmake  MikoMacros.cmake  MikoPlatform.cmake
docs/en/: api-reference.md  examples.md  getting-started.md  readme.md
docs/th/: getting-started.md  readme.md
example/: main.cpp
mikoview/: app_config.cpp  mikoapp.cpp  mikoapp.hpp  mikoclient.cpp  mikoclient.hpp  simple_client.cpp  simple_client.hpp
mikoview/config/: app_config.cpp.in  app_config.hpp.in
mikoview/gui/: platform_gui.hpp
mikoview/gui/linux/: x11_dark.cpp  x11_dark.hpp
mikoview/jsapi/: filesystem.cpp  filesystem.hpp  invoke.cpp  invoke.hpp
renderer/: build.ts  config.ts  package.json  serve.ts
renderer/api/: package.json  tsconfig.json
renderer/api/src/core/: filesystem.ts  invoke.ts
renderer/react/: package.json
renderer/react/src/: index.css
renderer/src/: App.tsx
renderer/vue/: README.md
src/: app_config.cpp  app_config.hpp  main.cpp  simple_app.cpp  simple_app.hpp  simple_client.cpp  simple_client.hpp
src/gui/: win32_dark.cpp  win32_dark.hpp
tools/: iconconvert.py  makeinstaller.py
tools/quickbuild/: build_linux.sh  build_win.cmd
